@@ -91,6 +91,7 @@ E(OP_ClickObjectAction)
 E(OP_RecipeAutoCombine)
 E(OP_GMTrainSkillConfirm)
 E(OP_SkillUpdate)
+E(OP_TributeInfo)
 
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
